fix: prevent image from overflowing button on resize testimonials

--- a/src/stylesheets/components/_arrow.scss
+++ b/src/stylesheets/components/_arrow.scss
@@ -25,9 +25,8 @@
   &__arrow-icon {
     object-fit: contain;
     object-position: center;
-    transform: scale(10);
-    max-width: 100%;
-    max-height: 100%;
+    width: 1.1rem;
+    height: auto;
     display: block;
   }
 
@@ -48,7 +47,8 @@
     }
 
     &__arrow-icon {
-      transform: scale(18);
+      width: 2.5rem;
+      height: auto;
     }
   }
 
